package com.example.noteappunittesting.core.util

object TestTags {
    const val ORDER_SECTION = "ORDER_SECTION"
    const val TITLE_SECTION = "TITLE_SECTION"
    const val CONTENT_SECTION = "CONTENT_SECTION"
    const val NOTE_ITEM = "NOTE_ITEM"
}