...
        floatingActionButton = {
            FloatingActionButton(onClick = {
                navController.navigate(Screen.EditNoteScreen.route)
            },
                backgroundColor = MaterialTheme.colors.primary
            ) {
                Icon(imageVector = Icons.Default.Add, contentDescription = "Add")
            }
        },
        scaffoldState = scaffoldState,
    ) { padding ->
        permissionState.launchMultiplePermissionRequest()
        Column(
...
                IconButton(
                    onClick = {
                        viewModel.onEvent(NotesEvent.ToggleOrderSection)
                    },

                    ) {
                    Icon(imageVector = Icons.Default.Sort, contentDescription = "Sort")
                }

            }
            AnimatedVisibility(
                visible = state.isOrderSectionVisible,
                enter = fadeIn() + slideInVertically(),
...
