...
                        viewModel.onEvent(EditNoteEvent.UpdateImage(imagePath))
                        viewModel.onEvent(EditNoteEvent.SaveNote)
                    }
                },
                backgroundColor = MaterialTheme.colors.primary,
            ) {
                Icon(imageVector = Icons.Default.Save, contentDescription = "Save")
            }
        },
        scaffoldState = scaffoldState
    ) { padding ->
        Column(
            modifier = Modifier
...
